# Depot

./: README.md
C/: README.md
Projet Cuda/: README.md
Projet Cuda/MultiplePivotSeq/: README.md  makefile
Projet Cuda/cuda/: makefile
Projet Cuda/openmp/: makefile
Projet Cuda/seq/: README.md  makefile
Projet Denoise Image/: READMe.md
Projet Denoise Image/Kokkos/: CMakeLists.txt  Makefile  README.md  denoise.cpp  jpgtoppm.py  ppmtojpg.py  soumission.job
Projet Denoise Image/OpenMP/: Makefile  README.md  denoise.cpp  soumission.job
Projet Denoise Image/OpenMPGPU/: Makefile  README.md  denoise.cpp
Projet Denoise Image/OpenMPGPUTask/: README.md  denoise.cpp  ppmtojpg.py  soumission.job
Projet Denoise Image/Sequentiel/: Makefile  README.md  denoise.cpp  jpgtoppm.py  soumission.job
Projet HTML CSS/: README.md
Projet HTML CSS/Acceuil/: Acceuil.html
Projet HTML CSS/Contact/: Contact.html
Projet HTML CSS/Reservation/: reservation.html  reservation.js
Projet OpenGL/: README.md
Projet Optimisation/: README.md
Projet PHP LARAVEL/: .env.example  README.md
Projet PLSQL/: BDetPeuplement.sql  README.md  requetes.sql
Projet Python/: Categorie.txt  MenuGestionDesPlats.py  MenuGestionDesStocks.py  MenuHistoriqueDesCommandes.py  MenuPrincipal.py  MenuPriseDeCommande.py  Plat.txt  Produits.txt  Projet Pyton.py  README.md
Projet Stage/: README.md  convnextModel.py  model.py  myjob2.sh  myjob4.sh  myjob8.sh  projet.py  projet2.py
Projet Sudoku/: README.md
Projet Traitement d'image/: README.txt  projet.py
Projet info0102/: README.md
(+478 files in other folders)
